tests/error/operator_valid.gw
// [contains] is not a valid operator name
 operator void op(int i){}
